--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML & CSS Template Three</title>
+    <link rel="stylesheet" href="CSS/normalize.css">
+    <link rel="stylesheet" href="CSS/style.css">
+    <!-- Font awesome -->
+    <link rel="stylesheet" href="CSS/all.min.css">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;700&amp;display=swap" rel="stylesheet">
 </head>
+
 <body>
-    
+    <!-- Start Header -->
+        <div class="header" id="header">
+            <div class="container">
+                <a href="#" class="logo">Elzero</a>
+                <ul class="main-nav">
+                    <li><a href="#article">Article</a></li>
+                    <li><a href="#gallery">Gallery</a></li>
+                    <li><a href="#features">Features</a></li>
+                    <li><a href="#">Other Links</a></li>
+                </ul>
+            </div>
+        </div>
+    <!-- End Header -->
 </body>
+
 </html>
