--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="CSS/style.css">
     <!-- Font awesome -->
     <link rel="stylesheet" href="CSS/all.min.css">
+    <script src="https://kit.fontawesome.com/44bf73723e.js" crossorigin="anonymous"></script>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;700&amp;display=swap" rel="stylesheet">
 </head>
@@ -19,7 +20,7 @@
             <div class="container">
                 <a href="#" class="logo">Elzero</a>
                 <ul class="main-nav">
-                    <li><a href="#article">Article</a></li>
+                    <li><a href="#articles">Article</a></li>
                     <li><a href="#gallery">Gallery</a></li>
                     <li><a href="#features">Features</a></li>
                     <li><a href="#">Other Links</a></li>
@@ -27,6 +28,22 @@
             </div>
         </div>
     <!-- End Header -->
+    <!-- Start Landing -->
+        <div class="landing">
+            <div class="container">
+                <div class="text">
+                    <h1>Welcome, To Elzero World    </h1>
+                    <p></p>
+                </div>
+                <div class="image">
+                    <img src="Images/landing-image.png" alt="">
+                </div>
+            </div>
+            <a href="#articles" class="go-down">
+                <i class="fas fa-angle-double-down fa-2x"></i>
+            </a>
+        </div>
+    <!-- End Landing -->
 </body>
 
 </html>
